--- a/Examples/13C_ColorContrast/13.C_ColorContrast.html
+++ b/Examples/13C_ColorContrast/13.C_ColorContrast.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Resources for 13.C Color Contrast </title>
+  <title>ADT Code Example for 13.C Color Contrast </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -9,31 +9,87 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h2>Resources for 13.C Color Contrast</h2>
+<div class="container">
+<h2>ADT Code Example for 13.C Color Contrast</h2>
+<p><strong>Title:</strong> Briefly describe the functionality and/or test case demonstrated by the code.</p>
+<p> <strong>Code Snippet:</strong>
+ <code> [Insert code snippet here]  </code>
+</p>
+<p><strong>Programming Language:</strong> Specify the programming language used in the code snippet (e.g., HTML, CSS, Javascript).</p>
+<p><strong>Explanation:</strong> 
+<ul>
+<li>Explain the code step-by-step, breaking down its functionality.</li>
+<li>Highlight key components and logic used within the code. </li>
+<li>Mention any specific libraries or frameworks used and their purpose.</li>
+</ul>
+</p>
+<p><strong>Testing Points:</strong> 
+<ul>
+<li>List the specific aspects of the functionality that this code example is designed to test.</li>
+<li>Describe the expected behavior or output for successful testing. </li>
+
+</ul>
+</p>
+
+<p><strong>Additional Notes:</strong> 
+<ul>
+<li>Include any relevant information.</li>
+<li>Mention potential limitations to consider.</li>
+<li>Provide links to any external resources used in the code or explanation (avoid using URLs directly).</li>
+</ul>
+</p>
+
 <fieldset>
-    <legend>Click on 'Test Results' below to open and close it.</legend>
-	<div class="container">
-  
-  
+
+    <legend>Example for 13.C Color Contrast, Click below to show/hide examples.</legend>
+	
+   
   <div class="panel-group">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" href="#collapse13">Test Results</a>
+          <a data-toggle="collapse" href="#collapse13">Code snippet for different Test Results</a>
         </h4>
       </div>
       <div id="collapse13" class="panel-collapse collapse">
-        <div class="panel-body"> <a href="https://www.google.com/" target="_blank"><u>Pass</u></a> </div>
-        <div class="panel-footer"> <a href="https://www.google.com/" target="_blank"><u>Fail</u></a> </div>
-		<div class="panel-body"><a href="https://www.google.com/" target="_blank"><u>Does Not Apply</u></a> </div>
+        <div class="panel-body"> <a href=".\13C_Pass.html" target="_blank"><u>Pass Example</u></a> </div>
+        <div class="panel-footer"> <a href="https://www.google.com/" target="_blank"><u>Fail Example</u></a> </div>
+		<!--<div class="panel-body"><a href="https://www.google.com/" target="_blank"><u>Does Not Apply</u></a> </div>-->
         
       </div>
     </div>
   </div>
-</div>
-
 
 </fieldset>
+<p><strong>Programming Language:</strong> HTML </P>
 
+<p><strong>Explanation:</strong> 
+<ul>
+<li> The code defines styles for the body, heading (<code>&lt;h1&gt;</code>), and paragraph (<code>&lt;p&gt;</code>).</li>
+<li>The <code>color</code> property defines the text color, while <code>background-color</code> defines the background color of each element.</li>
+<li>Provide links to any external resources used in the code or explanation (avoid using URLs directly).</li>
+<li>Ensure a contrast ratio of at least 3:1 for large text (headings) and at least 4.5:1 for regular text (paragraphs).</li>
+<li> Additional styles like <code>font-family, line-height, </code>and <code>padding</code> enhance readability.</li>
+</ul>
+</p>
+
+<p><strong>Testing Points:</strong> 
+<ul>
+<li> Use CCA tool to verify contrast ratios.</li>
+<li>Use ANDI to verify color contrast ratios.</li>
+</ul>
+</p>
+
+<p><strong>Additional Notes:</strong> 
+<ul>
+<li> This example demonstrates sufficient color contrast aligned to Trusted Tester Test ID: 13.C Contrast.</li>
+<li>The <code>color</code> property defines the text color, while <code>background-color</code> defines the background color of each element.</li>
+<li>Source:<a href="https://www.freecodecamp.org/news/a-poets-introduction-to-web-development/">A poet's introduction to web development (freecodecamp.org)</a></li>
+
+</ul>
+</p>
+
+
+</div>
 </body>
 </html>
